--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
     <meta name="theme-color" content="#1976d2">
   </head>
   <body>
-    <tc-root></tc-root>
+    <tc-timecard></tctimecard>
   </body>
 </html>
